--- a/briefings/2025-11-25.html
+++ b/briefings/2025-11-25.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI-Pulse Briefing - 2025-11-25</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script>
         function toggleEvent(id) {
@@ -380,8 +380,8 @@
         </div>
 
         <nav class="header-nav">
-            <a href="index.html">Latest</a>
-            <a href="archive.html">Archive</a>
+            <a href="../index.html">Latest</a>
+            <a href="../archive.html">Archive</a>
             <a href="https://github.com/mat-e-exp/ai-pulse">GitHub</a>
         </nav>
     </header>
