Automate Bitcoin collection via Alpha Vantage crypto API
Implementation:
- Updated fetch_alpha_vantage_daily() to detect BTC-USD symbol
- Uses DIGITAL_CURRENCY_DAILY endpoint for crypto
- Handles different response format for crypto vs stocks
- Volume parsing as float (crypto can be decimal)

Added Nov 21 Bitcoin data:
- Close: $85,068.88 (-1.70%)
- Now has full historical data matching other symbols

Bitcoin collection now fully automated:
- Will collect automatically in future workflow runs
- Works through Alpha Vantage fallback tier
- Complete OHLC data with change percentage

Chart now shows all 11 symbols (10 original + Bitcoin) with complete data

--- a/briefings/2025-11-25.html
+++ b/briefings/2025-11-25.html
@@ -214,7 +214,7 @@
 
             // Market Performance Chart
             const marketCtx = document.getElementById('marketChart').getContext('2d');
-            const marketData = {"AIQ": {"name": "AI Analytics ETF", "dates": ["2025-11-21", "2025-11-24"], "changes": [0.57, 3.17]}, "BOTZ": {"name": "AI/Robotics ETF", "dates": ["2025-11-21", "2025-11-24"], "changes": [1.24, 1.73]}, "PLTR": {"name": "Palantir", "dates": ["2025-11-21", "2025-11-24"], "changes": [-0.57, 4.78]}, "AMD": {"name": "AMD", "dates": ["2025-11-21", "2025-11-24"], "changes": [-1.09, 5.53]}, "META": {"name": "Meta", "dates": ["2025-11-21", "2025-11-24"], "changes": [0.87, 3.16]}, "GOOGL": {"name": "Alphabet", "dates": ["2025-11-21", "2025-11-24"], "changes": [3.53, 6.31]}, "MSFT": {"name": "Microsoft", "dates": ["2025-11-21", "2025-11-24"], "changes": [-1.32, 0.4]}, "NVDA": {"name": "NVIDIA", "dates": ["2025-11-21", "2025-11-24"], "changes": [-0.97, 2.05]}, "^GSPC": {"name": "S&P 500", "dates": ["2025-11-21", "2025-11-24"], "changes": [0.98, 1.55]}, "^IXIC": {"name": "NASDAQ Composite", "dates": ["2025-11-21", "2025-11-24"], "changes": [0.88, 2.69]}, "BTC-USD": {"name": "Bitcoin", "dates": ["2025-11-24"], "changes": [1.68]}};
+            const marketData = {"BTC-USD": {"name": "Bitcoin", "dates": ["2025-11-21", "2025-11-24"], "changes": [-1.7, 1.68]}, "AIQ": {"name": "AI Analytics ETF", "dates": ["2025-11-21", "2025-11-24"], "changes": [0.57, 3.17]}, "BOTZ": {"name": "AI/Robotics ETF", "dates": ["2025-11-21", "2025-11-24"], "changes": [1.24, 1.73]}, "PLTR": {"name": "Palantir", "dates": ["2025-11-21", "2025-11-24"], "changes": [-0.57, 4.78]}, "AMD": {"name": "AMD", "dates": ["2025-11-21", "2025-11-24"], "changes": [-1.09, 5.53]}, "META": {"name": "Meta", "dates": ["2025-11-21", "2025-11-24"], "changes": [0.87, 3.16]}, "GOOGL": {"name": "Alphabet", "dates": ["2025-11-21", "2025-11-24"], "changes": [3.53, 6.31]}, "MSFT": {"name": "Microsoft", "dates": ["2025-11-21", "2025-11-24"], "changes": [-1.32, 0.4]}, "NVDA": {"name": "NVIDIA", "dates": ["2025-11-21", "2025-11-24"], "changes": [-0.97, 2.05]}, "^GSPC": {"name": "S&P 500", "dates": ["2025-11-21", "2025-11-24"], "changes": [0.98, 1.55]}, "^IXIC": {"name": "NASDAQ Composite", "dates": ["2025-11-21", "2025-11-24"], "changes": [0.88, 2.69]}};
             const correlationData = {"total": 0, "correct": 0, "wrong": 0, "ambiguous": 0, "accuracy_pct": 0, "timeline": []};
 
             // Use same date range as sentiment chart (reuse labels from sentiment chart)
@@ -376,7 +376,7 @@
 
         <div class="header-center">
             <h1>🧠 AI-Pulse</h1>
-            <p class="date">2025-11-25 09:37 UTC</p>
+            <p class="date">2025-11-25 09:42 UTC</p>
         </div>
 
         <nav class="header-nav">
